Criado controle de acesso

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=lorena102030
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.datasource.hikari.auto-commit=false
+
+## Security
+jwt.secret=javainuse
